--- a/index.html
+++ b/index.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>my profile</title>
-		
-	</head>
-	<body>
-		<p>My name is Moses</p>
-	
-	</body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dating Site</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <h1>H00LI</h1>
+    <h2>Find your Life partner</h2>
+  </header>
+  
+  <nav>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Profile</a></li>
+      <li><a href="#">Messages</a></li>
+      <li><a href="#">Matches</a></li>
+      <li><a href="#">Settings</a></li>
+    </ul>
+  </nav>
+  
+  <main>
+    <section id="featured-profiles">
+      <h2>Featured Profiles</h2>
+      <div class="featured-profile">
+        <img src="https://generated.photos/realistic/person-sitting-on-a-bench-in-the-park-looking-at-the-camera-d5882f888888888888888888.jpg" alt="Featured Profile">
+        <h3>John Doe</h3>
+        <p>John is a 30-year-old software engineer who loves to travel, read, and play video games.</p>
+        <a href="#">View Profile</a>
+      </div>
+      <div class="featured-profile">
+        <img src="https://generated.photos/realistic/person-standing-in-front-of-a-mountain-range-smiling-d5882f888888888888888888.jpg" alt="Featured Profile">
+        <h3>Jane Doe</h3>
+        <p>Jane is a 25-year-old nurse who loves to hike, camp, and spend time with her family.</p>
+        <a href="#">View Profile</a>
+      </div>
+      <div class="featured-profile">
+        <img src="https://generated.photos/realistic/person-sitting-at-a-coffee-shop-working-on-a-laptop-d5882f888888888888888888.jpg" alt="Featured Profile">
+        <h3>Peter Smith</h3>
+        <p>Peter is a 27-year-old lawyer who loves to cook, travel, and play basketball.</p>
+        <a href="#">View Profile</a>
+      </div>
+    </section>
+    
+    <section id="search-form">
+      <h2>Find Your Match</h2>
+      <form action="#">
+        <input type="text" name="name" placeholder="Name">
+        <input type="text" name="age" placeholder="Age">
+        <input type="text" name="location" placeholder="Location">
+        <input type="submit" value="Search">
+      </form>
+    </section>
+  </main>
+  
+  <footer>
+    <p>&copy; 2023 Dating Site. All rights reserved.</p>
+  </footer>
+</body>
 </html>
+
