--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
       <h2>Featured Profiles</h2>
       <div class="featured-profile">
         <img src="https://generated.photos/realistic/person-sitting-on-a-bench-in-the-park-looking-at-the-camera-d5882f888888888888888888.jpg" alt="Featured Profile">
-        <h3>John Doe</h3>
-        <p>John is a 30-year-old software engineer who loves to travel, read, and play video games.</p>
+        <h3>Moses Gitonga</h3>
+        <p>Moses is a 20-year-old software engineer who loves to travel, read, and play video games.</p>
         <a href="#">View Profile</a>
       </div>
       <div class="featured-profile">
         <img src="https://generated.photos/realistic/person-standing-in-front-of-a-mountain-range-smiling-d5882f888888888888888888.jpg" alt="Featured Profile">
-        <h3>Jane Doe</h3>
-        <p>Jane is a 25-year-old nurse who loves to hike, camp, and spend time with her family.</p>
+        <h3>Alex Mwangi</h3>
+        <p>Alex is a 25-year-old nurse who loves to hike, camp, and spend time with her family.</p>
         <a href="#">View Profile</a>
       </div>
       <div class="featured-profile">
         <img src="https://generated.photos/realistic/person-sitting-at-a-coffee-shop-working-on-a-laptop-d5882f888888888888888888.jpg" alt="Featured Profile">
-        <h3>Peter Smith</h3>
-        <p>Peter is a 27-year-old lawyer who loves to cook, travel, and play basketball.</p>
+        <h3>Stella Nyabura</h3>
+        <p>Stella is a 27-year-old lawyer who loves to cook, travel, and play basketball.</p>
         <a href="#">View Profile</a>
       </div>
     </section>
