--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dating Site</title>
+  <title>H00LI</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <h1>H00LI</h1>
-    <h2>Find your Life partner</h2>
+    <h2>Easiest Way to Find a Date or a Hookup</h2>
   </header>
   
   <nav>
@@ -26,13 +26,13 @@
     <section id="featured-profiles">
       <h2>Featured Profiles</h2>
       <div class="featured-profile">
-        <img src="https://generated.photos/realistic/person-sitting-on-a-bench-in-the-park-looking-at-the-camera-d5882f888888888888888888.jpg" alt="Featured Profile">
+        <img src="https://github.com/mosesgitonga/trial.github.io/blob/main/IMG_20221014_081431_819.jpg" alt="Featured Profile">
         <h3>Moses Gitonga</h3>
         <p>Moses is a 20-year-old software engineer who loves to travel, read, and play video games.</p>
         <a href="#">View Profile</a>
       </div>
       <div class="featured-profile">
-        <img src="https://generated.photos/realistic/person-standing-in-front-of-a-mountain-range-smiling-d5882f888888888888888888.jpg" alt="Featured Profile">
+        <img src="<pre><font color="#26A269"><b>IMG_20221014_081431_819.jpg</b></font></pre>" alt="Featured Profile">
         <h3>Alex Mwangi</h3>
         <p>Alex is a 25-year-old nurse who loves to hike, camp, and spend time with her family.</p>
         <a href="#">View Profile</a>
