--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>H00LI</title>
+  <title>eutopia</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>H00LI</h1>
-    <h2>Easiest Way to Find a Date or a Hookup</h2>
+    <h1>EUTOPIA</h1>
+    <h2>Find A Partner That Will Last</h2>
   </header>
   
   <nav>
