color change to pink

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="featured-profile">
         <img src="https://generated.photos/realistic/person-sitting-at-a-coffee-shop-working-on-a-laptop-d5882f888888888888888888.jpg" alt="Featured Profile">
-        <h3>Stella Nyabura</h3>
+        <h3>Stella Nyambura</h3>
         <p>Stella is a 27-year-old lawyer who loves to cook, travel, and play basketball.</p>
         <a href="#">View Profile</a>
       </div>
