--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>EUTOPIA</h1>
-    <h2>Find A Partner That Will Last</h2>
+    <h2>Discover, Connect, Love Unconditionally</h2>
   </header>
   
   <nav>
@@ -26,7 +26,7 @@
     <section id="featured-profiles">
       <h2>Featured Profiles</h2>
       <div class="featured-profile">
-        <img src="https://github.com/mosesgitonga/trial.github.io/blob/main/IMG_20221014_081431_819.jpg" alt="Featured Profile">
+        <img src="https://raw.githubusercontent.com/mosesgitonga/trial.github.io/main/IMG_20221014_081431_819.jpg" alt="Featured Profile">
         <h3>Moses Gitonga</h3>
         <p>Moses is a 20-year-old software engineer who loves to travel, read, and play video games.</p>
         <a href="#">View Profile</a>
